--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -12,17 +12,27 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="#ca5858"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="5dp"
+        android:layout_gravity="top" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Elan"
-        android:id="@+id/tvUsername"
+        android:id="@+id/tvName"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/tvScreenName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="\@elan"
+        android:textColor="#b3b3b3"
+        android:layout_toRightOf="@id/tvName"
+        android:layout_marginLeft="5dp" />
     <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
@@ -38,8 +48,7 @@
         android:layout_height="wrap_content"
         android:text="Tweet text"
         android:id="@+id/tvText"
-        android:layout_alignBottom="@+id/ivProfileImage"
         android:layout_toRightOf="@+id/ivProfileImage"
         android:layout_toEndOf="@+id/ivProfileImage"
-        android:layout_below="@id/tvUsername" />
+        android:layout_below="@id/tvName" />
 </RelativeLayout>
